[package]
name = "rs_bot"
version = "0.1.0"
authors = ["SyoBoN"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "*", features = ["framework", "standard_framework"]}
tokio = {version = "*", features = ["macros", "rt-multi-thread"]}